# Causal-Language-Model-from-Scratch

./: .gitignore  README.md  main.py  pyproject.toml
model/: config.py  model.py  tokenizer.py
